force-app/main/default/objects/Variation__c/Variation__c.object-meta.xml
<CustomObject>
    <description>Object to record variations made on any loyalty contracts</description>
    <label>Variation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Variation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Variations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>