force-app/main/default/objects/Variation__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to describe is a variation is active or not with the associated contract</description>
    <inlineHelpText>Box will be checked if the variation is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>