force-app/main/default/objects/Variation__c/fields/Clauses_Variations__c.field-meta.xml
<CustomField>
    <fullName>Clauses_Variations__c</fullName>
    <description>Text field where changes to variation clauses are made</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What contract clauses are being affected by this variation</inlineHelpText>
    <label>Clause Variations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>