force-app/main/default/objects/Variation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Text box for any high-level information on the variation</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional information about this variation</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>