force-app/main/default/objects/Variation__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Variation change for end date to the contract</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the contract expires. This will update with any variation extension dates.</inlineHelpText>
    <label>New Contract End Date</label>
    <type>Date</type>
</CustomField>