force-app/main/default/objects/Variation__c/fields/Contract_Variation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Variation_Reason__c</fullName>
    <description>Picklist to define the type of variation created</description>
    <inlineHelpText>Details of why this variation has occurred</inlineHelpText>
    <label>Contract Variation Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Amendment + Extension</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>