force-app/main/default/objects/Variation__c/recordTypes/Amendment_Only.recordType-meta.xml
<RecordType>
    <fullName>Amendment_Only</fullName>
    <active>true</active>
    <description>Record type for the amendment only variation</description>
    <label>Amendment Only</label>
</RecordType>