force-app/main/default/objects/Variation__c/recordTypes/Extension_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Extension_Record_Type</fullName>
    <active>true</active>
    <description>Record type for extensions or both extension and amendment</description>
    <label>Extension</label>
</RecordType>