force-app/main/default/objects/Variation__c/validationRules/Checking_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Checking_date</fullName>
    <active>true</active>
    <description>Ensuring end date is entered if the variation reason is an extension</description>
    <errorConditionFormula>AND(OR(  
ISPICKVAL( Contract_Variation_Reason__c , &apos;Extension&apos;)  ,ISPICKVAL( Contract_Variation_Reason__c , &apos;Amendment + Extension&apos;))
,ISBLANK( Contract_End_Date__c ))</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Please enter an end date</errorMessage>
</ValidationRule>