force-app/main/default/objects/Variation__c/validationRules/Greater_then_Contract_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Greater_then_Contract_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Contract_End_Date__c  &lt;  Contract_Agreement__r.Contract_End_Date__c</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Extension end date needs to be greater than the contract end date</errorMessage>
</ValidationRule>